[package]
name = "signals"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3.15"
pin-project = "0.4.22"
#futures-executor = "0.3.5"
futures = "0.3.5"
easy-parallel = "3.1.0"
